<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbar_top_height"
        android:background="@color/fd_main_title_bg"
        android:gravity="center" >

        <TextView
            style="@style/top_bar_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_title" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:paddingLeft="@dimen/margin_space_15"
        android:paddingRight="@dimen/margin_space_15"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_title1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_space_10"
                android:layout_marginTop="@dimen/margin_space_15"
                android:text="@string/error_tips"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <View
                style="@style/horizontal_line"
                android:layout_width="fill_parent"
                android:layout_height="1dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_space_10"
                android:text="@string/error_idea_tips"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/et_user_idea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/common_edittext_change"
                android:textColor="@color/black"
                android:gravity="top"
                android:hint="@string/error_idea_hint"
                android:maxHeight="100dip"
                android:maxLength="200"
                android:minHeight="100dip"
                android:minLines="5"
                android:singleLine="false" />

            <CheckBox
                android:id="@+id/ckb_report"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/common_checkbox_selector"
                android:text="@string/ckb_report"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_space_10" >

                <Button
                    android:id="@+id/btn_report"
                    style="@style/common_btn"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/common_blue_btn"
                    android:gravity="center"
                    android:onClick="forClick"
                    android:text="@string/btn_restart" />

                <Button
                    android:id="@+id/btn_close"
                    style="@style/common_btn"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/common_red_btn"
                    android:gravity="center"
                    android:onClick="forClick"
                    android:text="@string/btn_close" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>